# geofences

./: CMakeLists.txt  README.md  placemarkParser.cpp  placemarkParser.h  pointFinder.cpp  pointFinder.h  treeBuilder.cpp  treeBuilder.h
geofenceEntities/: point.cpp  point.h  sector.cpp  sector.h
geofenceEntities/Placemarks/: placemark.cpp  placemark.h  polygon.cpp  polygon.h  road.cpp  road.h
storage/: reader.h
storage/fileSystem/: reader.cpp  writer.cpp  writer.h
